# int-hash

./: .travis.yml  Cargo.toml  LICENSE-APACHE  README.md  bench_report.md  compare  seedsearch
benches/: 32xt-u64.txt  map.rs  rand-u64-small.txt  rand-u64.txt  rand-u8.txt
src/: lib.rs
